# edge-slm-ace

./: .gitignore  ACE_READINESS_ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  DEV_ARCHITECTURE_OVERVIEW.md  DEV_NOTES_PERSON1.md  EVAL_SCIQ.md  FINAL_SUMMARY.md  PLOTTING_GUIDE.md  PLOTTING_SETUP_SUMMARY.md  PUBLICATION_CHECKLIST.md  README.md  REPOSITORY_STRUCTURE.md  TEAM_NOTES.md  pyproject.toml  requirements.txt  results_ablation  results_models  setup.py  tinyace_plots.py
.github/: CODEOWNERS  README.md
.github/workflows/: ci.yaml
configs/: exp_grid.yaml  experiment_grid.yaml  qwen_rivals_contract.yaml
data/tasks/: iot_tiny.json  medqa_tiny.json  sciq_mcq_test.jsonl  sciq_test.json  sciq_test.jsonl  (+6 more)
docs/: API.md  ARCHITECTURE.md  DEV_ARCHITECTURE_OVERVIEW.md.old  EXPERIMENT_RESULTS.md.old  FINAL_STRUCTURE.md  INSTALLATION.md  NAVIGATION.md  PAPER_TRACKING.md  QUICK_START.md  README.md  RESTRUCTURING_SUMMARY.md  RESULTS.md  STRUCTURE.md
playbooks/: tatqa_playbook.jsonl
results/: smoke_test.csv  tatqa_phi3_baseline_cuda.csv  tatqa_phi3_baseline_cuda2.csv  tatqa_tiny_ace_test.csv
scripts/: aggregate_results.py  plot_results.py  run_ace_epoch.py  run_all_tiny_baselines.py  run_eval_grid.py  run_experiment.py  run_grid.py  run_qwen_rivals.py  run_qwen_rivals.sh  smoke_gpu_phi3.py  smoke_test.py  summarize_results.py  tinyace_plots.py
slm_ace/: __init__.py  ace_roles.py  config.py  metrics.py  model_manager.py  playbook.py  runner.py  utils.py
tests/: test_ace_roles.py  test_aggregate_results.py  test_mcq_eval.py  test_model_manager.py  test_playbook.py
(+22 files in other folders)
